# obsidian-synapsis

./: .gitignore  LICENSE  config.py  main.py  modes_config.json  pyproject.toml
controllers/: ai_controller.py  health_controller.py  mode_controller.py  save_controller.py
doc/issue/: 0001-AI回答.md  0002-複数モード.md  0003-git-commit-push.md  0004-MVC分離.md
doc/plan/: 0001-AI回答機能実装計画.md  0002-複数モード機能実装計画.md  0004-MVC分離.md
models/: requests.py  responses.py
services/: ai_service.py  file_service.py  git_service.py  mode_service.py
static/css/: style.css
static/js/: app.js
templates/: index.html
