[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-synapsis"
version = "0.1.0"
description = "Webサーバーでリクエストを受けてファイルとして保存"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.0.0",
    "jinja2>=3.1.0",
]

[tool.setuptools]
packages = ["controllers", "services", "models"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
